# ai-chat-assistant

./: .gitignore  README.md  start.sh
.claude/commands/: update-docs.md
.claude/skills/auto-generate-todo/: SKILL.md
.claude/skills/to-do/: SKILL.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  base.py  document.py  financial.py  supervisor.py
backend/src/api/: admin.py  auth.py  chat.py  conversations.py  upload.py
backend/src/core/: auth.py  dependencies.py  llm_client.py  streaming.py
backend/src/db/: mongo.py
backend/src/models/: conversation.py  user.py
backend/src/services/: attachment.py  document.py
backend/src/utils/: logger.py  temp_manager.py
docs/: API.md  main.md  v1.1.md  v1.2.md  v1.3.md
docs/engineering/: update-and-deploy-spec.md
docs/updates/: to-do-list-20260210153341.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: layout.tsx
frontend/app/login/: page.tsx
frontend/components/: admin-user-table.tsx  auth-provider.tsx  chat-header.tsx  chat-input.tsx  chat-main.tsx  chat-message.tsx  chat-messages.tsx  chat-sidebar.tsx  language-toggle.tsx  login-form.tsx  membership-badge.tsx  register-form.tsx  welcome-screen.tsx
frontend/lib/: api.ts  i18n.tsx  websocket.ts
frontend/messages/: en.json  zh.json
frontend/stores/: use-conversation-store.ts  useAuthStore.ts
(+4 files in other folders)
