[project]
name = "ai-chat-assistant"
version = "1.0.0"
description = "AI Chat Assistant with Agent Routing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "openai>=1.57.0",
    "anthropic>=0.42.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pillow>=11.0.0",
    "structlog>=24.4.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "pyjwt>=2.9.0",
    "passlib[argon2]>=1.7.4",
    "captcha>=0.5.0",
    "bcrypt>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
